Lang/langbackup/aegiscriptParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 3.5
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// $ANTLR 3.5 D:\\Eclipse\\aegiscript_live\\aegiscript.g 2013-03-01 18:14:20

// The variable 'variable' is assigned but its value is never used.
#pragma warning disable 219
// Unreachable code detected.
#pragma warning disable 162
// Missing XML comment for publicly visible type or member 'Type_or_Member'
#pragma warning disable 1591
// CLS compliance checking will not be performed on 'type' because it is not visible from outside this assembly.
#pragma warning disable 3019





using System.Collections.Generic;
using Antlr.Runtime;
using Antlr.Runtime.Misc;


using Antlr.Runtime.Tree;
using RewriteRuleITokenStream = Antlr.Runtime.Tree.RewriteRuleTokenStream;

namespace 
    AEGIScript.Lang

{
[System.CodeDom.Compiler.GeneratedCode("ANTLR", "3.5")]
//[System.CLSCompliant(false)]
public partial class aegiscriptParser : Antlr.Runtime.Parser
{
	internal static readonly string[] tokenNames = new string[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "COMMENT", "DIGIT", "ESC_SEQ", "EXPONENT", "FLOAT", "HEX_DIGIT", "IDENT", "INTEGER", "LETTER", "MULTILINE_COMMENT", "OCTAL_ESC", "STRING", "UNICODE_ESC", "WS", "'('", "')'", "'*'", "'+'", "','", "'-'", "'/'", "'/='", "':'", "';'", "'<'", "'<='", "'='", "'>'", "'>='", "'Integer'", "'and'", "'begin'", "'constant'", "'else'", "'elsif'", "'end'", "'if'", "'mod'", "'not'", "'or'", "'var'", "'while'"
	};
	public const int EOF=-1;
	public const int T__18=18;
	public const int T__19=19;
	public const int T__20=20;
	public const int T__21=21;
	public const int T__22=22;
	public const int T__23=23;
	public const int T__24=24;
	public const int T__25=25;
	public const int T__26=26;
	public const int T__27=27;
	public const int T__28=28;
	public const int T__29=29;
	public const int T__30=30;
	public const int T__31=31;
	public const int T__32=32;
	public const int T__33=33;
	public const int T__34=34;
	public const int T__35=35;
	public const int T__36=36;
	public const int T__37=37;
	public const int T__38=38;
	public const int T__39=39;
	public const int T__40=40;
	public const int T__41=41;
	public const int T__42=42;
	public const int T__43=43;
	public const int T__44=44;
	public const int T__45=45;
	public const int COMMENT=4;
	public const int DIGIT=5;
	public const int ESC_SEQ=6;
	public const int EXPONENT=7;
	public const int FLOAT=8;
	public const int HEX_DIGIT=9;
	public const int IDENT=10;
	public const int INTEGER=11;
	public const int LETTER=12;
	public const int MULTILINE_COMMENT=13;
	public const int OCTAL_ESC=14;
	public const int STRING=15;
	public const int UNICODE_ESC=16;
	public const int WS=17;

	public aegiscriptParser(ITokenStream input)
		: this(input, new RecognizerSharedState())
	{
	}
	public aegiscriptParser(ITokenStream input, RecognizerSharedState state)
		: base(input, state)
	{
		ITreeAdaptor treeAdaptor = default(ITreeAdaptor);
		CreateTreeAdaptor(ref treeAdaptor);
		TreeAdaptor = treeAdaptor ?? new CommonTreeAdaptor();
		OnCreated();
	}
	// Implement this function in your helper file to use a custom tree adaptor
	partial void CreateTreeAdaptor(ref ITreeAdaptor adaptor);

	private ITreeAdaptor adaptor;

	public ITreeAdaptor TreeAdaptor
	{
		get
		{
			return adaptor;
		}

		set
		{
			this.adaptor = value;
		}
	}

	public override string[] TokenNames { get { return aegiscriptParser.tokenNames; } }
	public override string GrammarFileName { get { return "D:\\Eclipse\\aegiscript_live\\aegiscript.g"; } }

	partial void OnCreated();
	partial void EnterRule(string ruleName, int ruleIndex);
	partial void LeaveRule(string ruleName, int ruleIndex);

	#region Rules
	partial void EnterRule_program();
	partial void LeaveRule_program();
	// $ANTLR start "program"
	// D:\\Eclipse\\aegiscript_live\\aegiscript.g:31:1: public program : 'begin' ^ ( statement )* 'end' ';' EOF ;
	[GrammarRule("program")]
	public AstParserRuleReturnScope<CommonTree, IToken> program()
	{
		EnterRule_program();
		EnterRule("program", 1);
		TraceIn("program", 1);
		AstParserRuleReturnScope<CommonTree, IToken> retval = new AstParserRuleReturnScope<CommonTree, IToken>();
		retval.Start = (IToken)input.LT(1);

		CommonTree root_0 = default(CommonTree);

		IToken string_literal1 = default(IToken);
		IToken string_literal3 = default(IToken);
		IToken char_literal4 = default(IToken);
		IToken EOF5 = default(IToken);
		AstParserRuleReturnScope<CommonTree, IToken> statement2 = default(AstParserRuleReturnScope<CommonTree, IToken>);

		CommonTree string_literal1_tree = default(CommonTree);
		CommonTree string_literal3_tree = default(CommonTree);
		CommonTree char_literal4_tree = default(CommonTree);
		CommonTree EOF5_tree = default(CommonTree);
		try { DebugEnterRule(GrammarFileName, "program");
		DebugLocation(31, 1);
		try
		{
			// D:\\Eclipse\\aegiscript_live\\aegiscript.g:32:2: ( 'begin' ^ ( statement )* 'end' ';' EOF )
			DebugEnterAlt(1);
			// D:\\Eclipse\\aegiscript_live\\aegiscript.g:33:3: 'begin' ^ ( statement )* 'end' ';' EOF
			{
			root_0 = (CommonTree)adaptor.Nil();

			DebugLocation(33, 10);
			string_literal1=(IToken)Match(input,35,Follow._35_in_program94); 
			string_literal1_tree = (CommonTree)adaptor.Create(string_literal1);
			root_0 = (CommonTree)adaptor.BecomeRoot(string_literal1_tree, root_0);
			DebugLocation(34, 3);
			// D:\\Eclipse\\aegiscript_live\\aegiscript.g:34:3: ( statement )*
			try { DebugEnterSubRule(1);
			while (true)
			{
				int alt1=2;
				try { DebugEnterDecision(1, false);
				int LA1_1 = input.LA(1);

				if ((LA1_1==IDENT||LA1_1==40||LA1_1==45))
				{
					alt1 = 1;
				}


				} finally { DebugExitDecision(1); }
				switch ( alt1 )
				{
				case 1:
					DebugEnterAlt(1);
					// D:\\Eclipse\\aegiscript_live\\aegiscript.g:34:3: statement
					{
					DebugLocation(34, 3);
					PushFollow(Follow._statement_in_program99);
					statement2=statement();
					PopFollow();

					adaptor.AddChild(root_0, statement2.Tree);

					}
					break;

				default:
					goto loop1;
				}
			}

			loop1:
				;

			} finally { DebugExitSubRule(1); }

			DebugLocation(35, 3);
			string_literal3=(IToken)Match(input,39,Follow._39_in_program104); 
			string_literal3_tree = (CommonTree)adaptor.Create(string_literal3);
			adaptor.AddChild(root_0, string_literal3_tree);
			DebugLocation(35, 9);
			char_literal4=(IToken)Match(input,27,Follow._27_in_program106); 
			char_literal4_tree = (CommonTree)adaptor.Create(char_literal4);
			adaptor.AddChild(root_0, char_literal4_tree);
			DebugLocation(35, 13);
			EOF5=(IToken)Match(input,EOF,Follow._EOF_in_program108); 
			EOF5_tree = (CommonTree)adaptor.Create(EOF5);
			adaptor.AddChild(root_0, EOF5_tree);

			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (CommonTree)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("program", 1);
			LeaveRule("program", 1);
			LeaveRule_program();
		}
		DebugLocation(36, 1);
		} finally { DebugExitRule(GrammarFileName, "program"); }
		return retval;

	}
	// $ANTLR end "program"

	partial void EnterRule_constant();
	partial void LeaveRule_constant();
	// $ANTLR start "constant"
	// D:\\Eclipse\\aegiscript_live\\aegiscript.g:38:1: constant : 'constant' type IDENT '=' expression ';' ;
	[GrammarRule("constant")]
	private AstParserRuleReturnScope<CommonTree, IToken> constant()
	{
		EnterRule_constant();
		EnterRule("constant", 2);
		TraceIn("constant", 2);
		AstParserRuleReturnScope<CommonTree, IToken> retval = new AstParserRuleReturnScope<CommonTree, IToken>();
		retval.Start = (IToken)input.LT(1);

		CommonTree root_0 = default(CommonTree);

		IToken string_literal6 = default(IToken);
		IToken IDENT8 = default(IToken);
		IToken char_literal9 = default(IToken);
		IToken char_literal11 = default(IToken);
		AstParserRuleReturnScope<CommonTree, IToken> type7 = default(AstParserRuleReturnScope<CommonTree, IToken>);
		AstParserRuleReturnScope<CommonTree, IToken> expression10 = default(AstParserRuleReturnScope<CommonTree, IToken>);

		CommonTree string_literal6_tree = default(CommonTree);
		CommonTree IDENT8_tree = default(CommonTree);
		CommonTree char_literal9_tree = default(CommonTree);
		CommonTree char_literal11_tree = default(CommonTree);
		try { DebugEnterRule(GrammarFileName, "constant");
		DebugLocation(38, 1);
		try
		{
			// D:\\Eclipse\\aegiscript_live\\aegiscript.g:39:2: ( 'constant' type IDENT '=' expression ';' )
			DebugEnterAlt(1);
			// D:\\Eclipse\\aegiscript_live\\aegiscript.g:39:4: 'constant' type IDENT '=' expression ';'
			{
			root_0 = (CommonTree)adaptor.Nil();

			DebugLocation(39, 4);
			string_literal6=(IToken)Match(input,36,Follow._36_in_constant119); 
			string_literal6_tree = (CommonTree)adaptor.Create(string_literal6);
			adaptor.AddChild(root_0, string_literal6_tree);
			DebugLocation(39, 15);
			PushFollow(Follow._type_in_constant121);
			type7=type();
			PopFollow();

			adaptor.AddChild(root_0, type7.Tree);
			DebugLocation(39, 20);
			IDENT8=(IToken)Match(input,IDENT,Follow._IDENT_in_constant123); 
			IDENT8_tree = (CommonTree)adaptor.Create(IDENT8);
			adaptor.AddChild(root_0, IDENT8_tree);
			DebugLocation(39, 26);
			char_literal9=(IToken)Match(input,30,Follow._30_in_constant125); 
			char_literal9_tree = (CommonTree)adaptor.Create(char_literal9);
			adaptor.AddChild(root_0, char_literal9_tree);
			DebugLocation(39, 30);
			PushFollow(Follow._expression_in_constant127);
			expression10=expression();
			PopFollow();

			adaptor.AddChild(root_0, expression10.Tree);
			DebugLocation(39, 41);
			char_literal11=(IToken)Match(input,27,Follow._27_in_constant129); 
			char_literal11_tree = (CommonTree)adaptor.Create(char_literal11);
			adaptor.AddChild(root_0, char_literal11_tree);

			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (CommonTree)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("constant", 2);
			LeaveRule("constant", 2);
			LeaveRule_constant();
		}
		DebugLocation(40, 1);
		} finally { DebugExitRule(GrammarFileName, "constant"); }
		return retval;

	}
	// $ANTLR end "constant"

	partial void EnterRule_variable();
	partial void LeaveRule_variable();
	// $ANTLR start "variable"
	// D:\\Eclipse\\aegiscript_live\\aegiscript.g:42:1: variable : 'var' IDENT ( ',' IDENT )* ':' type ( '=' expression )? ';' ;
	[GrammarRule("variable")]
	private AstParserRuleReturnScope<CommonTree, IToken> variable()
	{
		EnterRule_variable();
		EnterRule("variable", 3);
		TraceIn("variable", 3);
		AstParserRuleReturnScope<CommonTree, IToken> retval = new AstParserRuleReturnScope<CommonTree, IToken>();
		retval.Start = (IToken)input.LT(1);

		CommonTree root_0 = default(CommonTree);

		IToken string_literal12 = default(IToken);
		IToken IDENT13 = default(IToken);
		IToken char_literal14 = default(IToken);
		IToken IDENT15 = default(IToken);
		IToken char_literal16 = default(IToken);
		IToken char_literal18 = default(IToken);
		IToken char_literal20 = default(IToken);
		AstParserRuleReturnScope<CommonTree, IToken> type17 = default(AstParserRuleReturnScope<CommonTree, IToken>);
		AstParserRuleReturnScope<CommonTree, IToken> expression19 = default(AstParserRuleReturnScope<CommonTree, IToken>);

		CommonTree string_literal12_tree = default(CommonTree);
		CommonTree IDENT13_tree = default(CommonTree);
		CommonTree char_literal14_tree = default(CommonTree);
		CommonTree IDENT15_tree = default(CommonTree);
		CommonTree char_literal16_tree = default(CommonTree);
		CommonTree char_literal18_tree = default(CommonTree);
		CommonTree char_literal20_tree = default(CommonTree);
		try { DebugEnterRule(GrammarFileName, "variable");
		DebugLocation(42, 1);
		try
		{
			// D:\\Eclipse\\aegiscript_live\\aegiscript.g:43:2: ( 'var' IDENT ( ',' IDENT )* ':' type ( '=' expression )? ';' )
			DebugEnterAlt(1);
			// D:\\Eclipse\\aegiscript_live\\aegiscript.g:43:4: 'var' IDENT ( ',' IDENT )* ':' type ( '=' expression )? ';'
			{
			root_0 = (CommonTree)adaptor.Nil();

			DebugLocation(43, 4);
			string_literal12=(IToken)Match(input,44,Follow._44_in_variable140); 
			string_literal12_tree = (CommonTree)adaptor.Create(string_literal12);
			adaptor.AddChild(root_0, string_literal12_tree);
			DebugLocation(43, 10);
			IDENT13=(IToken)Match(input,IDENT,Follow._IDENT_in_variable142); 
			IDENT13_tree = (CommonTree)adaptor.Create(IDENT13);
			adaptor.AddChild(root_0, IDENT13_tree);
			DebugLocation(43, 16);
			// D:\\Eclipse\\aegiscript_live\\aegiscript.g:43:16: ( ',' IDENT )*
			try { DebugEnterSubRule(2);
			while (true)
			{
				int alt2=2;
				try { DebugEnterDecision(2, false);
				int LA2_1 = input.LA(1);

				if ((LA2_1==22))
				{
					alt2 = 1;
				}


				} finally { DebugExitDecision(2); }
				switch ( alt2 )
				{
				case 1:
					DebugEnterAlt(1);
					// D:\\Eclipse\\aegiscript_live\\aegiscript.g:43:17: ',' IDENT
					{
					DebugLocation(43, 17);
					char_literal14=(IToken)Match(input,22,Follow._22_in_variable145); 
					char_literal14_tree = (CommonTree)adaptor.Create(char_literal14);
					adaptor.AddChild(root_0, char_literal14_tree);
					DebugLocation(43, 21);
					IDENT15=(IToken)Match(input,IDENT,Follow._IDENT_in_variable147); 
					IDENT15_tree = (CommonTree)adaptor.Create(IDENT15);
					adaptor.AddChild(root_0, IDENT15_tree);

					}
					break;

				default:
					goto loop2;
				}
			}

			loop2:
				;

			} finally { DebugExitSubRule(2); }

			DebugLocation(43, 29);
			char_literal16=(IToken)Match(input,26,Follow._26_in_variable151); 
			char_literal16_tree = (CommonTree)adaptor.Create(char_literal16);
			adaptor.AddChild(root_0, char_literal16_tree);
			DebugLocation(43, 33);
			PushFollow(Follow._type_in_variable153);
			type17=type();
			PopFollow();

			adaptor.AddChild(root_0, type17.Tree);
			DebugLocation(43, 38);
			// D:\\Eclipse\\aegiscript_live\\aegiscript.g:43:38: ( '=' expression )?
			int alt3=2;
			try { DebugEnterSubRule(3);
			try { DebugEnterDecision(3, false);
			int LA3_1 = input.LA(1);

			if ((LA3_1==30))
			{
				alt3 = 1;
			}
			} finally { DebugExitDecision(3); }
			switch (alt3)
			{
			case 1:
				DebugEnterAlt(1);
				// D:\\Eclipse\\aegiscript_live\\aegiscript.g:43:39: '=' expression
				{
				DebugLocation(43, 39);
				char_literal18=(IToken)Match(input,30,Follow._30_in_variable156); 
				char_literal18_tree = (CommonTree)adaptor.Create(char_literal18);
				adaptor.AddChild(root_0, char_literal18_tree);
				DebugLocation(43, 43);
				PushFollow(Follow._expression_in_variable158);
				expression19=expression();
				PopFollow();

				adaptor.AddChild(root_0, expression19.Tree);

				}
				break;

			}
			} finally { DebugExitSubRule(3); }

			DebugLocation(43, 56);
			char_literal20=(IToken)Match(input,27,Follow._27_in_variable162); 
			char_literal20_tree = (CommonTree)adaptor.Create(char_literal20);
			adaptor.AddChild(root_0, char_literal20_tree);

			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (CommonTree)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("variable", 3);
			LeaveRule("variable", 3);
			LeaveRule_variable();
		}
		DebugLocation(44, 1);
		} finally { DebugExitRule(GrammarFileName, "variable"); }
		return retval;

	}
	// $ANTLR end "variable"

	partial void EnterRule_type();
	partial void LeaveRule_type();
	// $ANTLR start "type"
	// D:\\Eclipse\\aegiscript_live\\aegiscript.g:46:1: type : 'Integer' ;
	[GrammarRule("type")]
	private AstParserRuleReturnScope<CommonTree, IToken> type()
	{
		EnterRule_type();
		EnterRule("type", 4);
		TraceIn("type", 4);
		AstParserRuleReturnScope<CommonTree, IToken> retval = new AstParserRuleReturnScope<CommonTree, IToken>();
		retval.Start = (IToken)input.LT(1);

		CommonTree root_0 = default(CommonTree);

		IToken string_literal21 = default(IToken);

		CommonTree string_literal21_tree = default(CommonTree);
		try { DebugEnterRule(GrammarFileName, "type");
		DebugLocation(46, 1);
		try
		{
			// D:\\Eclipse\\aegiscript_live\\aegiscript.g:47:2: ( 'Integer' )
			DebugEnterAlt(1);
			// D:\\Eclipse\\aegiscript_live\\aegiscript.g:47:4: 'Integer'
			{
			root_0 = (CommonTree)adaptor.Nil();

			DebugLocation(47, 4);
			string_literal21=(IToken)Match(input,33,Follow._33_in_type174); 
			string_literal21_tree = (CommonTree)adaptor.Create(string_literal21);
			adaptor.AddChild(root_0, string_literal21_tree);

			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (CommonTree)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("type", 4);
			LeaveRule("type", 4);
			LeaveRule_type();
		}
		DebugLocation(48, 1);
		} finally { DebugExitRule(GrammarFileName, "type"); }
		return retval;

	}
	// $ANTLR end "type"

	partial void EnterRule_ifStatement();
	partial void LeaveRule_ifStatement();
	// $ANTLR start "ifStatement"
	// D:\\Eclipse\\aegiscript_live\\aegiscript.g:50:1: ifStatement : 'if' ^ expression ':' ( statement )* ( elsif )* ( else_g )? endif ;
	[GrammarRule("ifStatement")]
	private AstParserRuleReturnScope<CommonTree, IToken> ifStatement()
	{
		EnterRule_ifStatement();
		EnterRule("ifStatement", 5);
		TraceIn("ifStatement", 5);
		AstParserRuleReturnScope<CommonTree, IToken> retval = new AstParserRuleReturnScope<CommonTree, IToken>();
		retval.Start = (IToken)input.LT(1);

		CommonTree root_0 = default(CommonTree);

		IToken string_literal22 = default(IToken);
		IToken char_literal24 = default(IToken);
		AstParserRuleReturnScope<CommonTree, IToken> expression23 = default(AstParserRuleReturnScope<CommonTree, IToken>);
		AstParserRuleReturnScope<CommonTree, IToken> statement25 = default(AstParserRuleReturnScope<CommonTree, IToken>);
		AstParserRuleReturnScope<CommonTree, IToken> elsif26 = default(AstParserRuleReturnScope<CommonTree, IToken>);
		AstParserRuleReturnScope<CommonTree, IToken> else_g27 = default(AstParserRuleReturnScope<CommonTree, IToken>);
		AstParserRuleReturnScope<CommonTree, IToken> endif28 = default(AstParserRuleReturnScope<CommonTree, IToken>);

		CommonTree string_literal22_tree = default(CommonTree);
		CommonTree char_literal24_tree = default(CommonTree);
		try { DebugEnterRule(GrammarFileName, "ifStatement");
		DebugLocation(50, 1);
		try
		{
			// D:\\Eclipse\\aegiscript_live\\aegiscript.g:51:2: ( 'if' ^ expression ':' ( statement )* ( elsif )* ( else_g )? endif )
			DebugEnterAlt(1);
			// D:\\Eclipse\\aegiscript_live\\aegiscript.g:51:4: 'if' ^ expression ':' ( statement )* ( elsif )* ( else_g )? endif
			{
			root_0 = (CommonTree)adaptor.Nil();

			DebugLocation(51, 8);
			string_literal22=(IToken)Match(input,40,Follow._40_in_ifStatement186); 
			string_literal22_tree = (CommonTree)adaptor.Create(string_literal22);
			root_0 = (CommonTree)adaptor.BecomeRoot(string_literal22_tree, root_0);
			DebugLocation(51, 10);
			PushFollow(Follow._expression_in_ifStatement189);
			expression23=expression();
			PopFollow();

			adaptor.AddChild(root_0, expression23.Tree);
			DebugLocation(51, 21);
			char_literal24=(IToken)Match(input,26,Follow._26_in_ifStatement191); 
			char_literal24_tree = (CommonTree)adaptor.Create(char_literal24);
			adaptor.AddChild(root_0, char_literal24_tree);
			DebugLocation(51, 25);
			// D:\\Eclipse\\aegiscript_live\\aegiscript.g:51:25: ( statement )*
			try { DebugEnterSubRule(4);
			while (true)
			{
				int alt4=2;
				try { DebugEnterDecision(4, false);
				int LA4_1 = input.LA(1);

				if ((LA4_1==IDENT||LA4_1==40||LA4_1==45))
				{
					alt4 = 1;
				}


				} finally { DebugExitDecision(4); }
				switch ( alt4 )
				{
				case 1:
					DebugEnterAlt(1);
					// D:\\Eclipse\\aegiscript_live\\aegiscript.g:51:25: statement
					{
					DebugLocation(51, 25);
					PushFollow(Follow._statement_in_ifStatement193);
					statement25=statement();
					PopFollow();

					adaptor.AddChild(root_0, statement25.Tree);

					}
					break;

				default:
					goto loop4;
				}
			}

			loop4:
				;

			} finally { DebugExitSubRule(4); }

			DebugLocation(51, 36);
			// D:\\Eclipse\\aegiscript_live\\aegiscript.g:51:36: ( elsif )*
			try { DebugEnterSubRule(5);
			while (true)
			{
				int alt5=2;
				try { DebugEnterDecision(5, false);
				int LA5_1 = input.LA(1);

				if ((LA5_1==38))
				{
					alt5 = 1;
				}


				} finally { DebugExitDecision(5); }
				switch ( alt5 )
				{
				case 1:
					DebugEnterAlt(1);
					// D:\\Eclipse\\aegiscript_live\\aegiscript.g:51:36: elsif
					{
					DebugLocation(51, 36);
					PushFollow(Follow._elsif_in_ifStatement196);
					elsif26=elsif();
					PopFollow();

					adaptor.AddChild(root_0, elsif26.Tree);

					}
					break;

				default:
					goto loop5;
				}
			}

			loop5:
				;

			} finally { DebugExitSubRule(5); }

			DebugLocation(51, 43);
			// D:\\Eclipse\\aegiscript_live\\aegiscript.g:51:43: ( else_g )?
			int alt6=2;
			try { DebugEnterSubRule(6);
			try { DebugEnterDecision(6, false);
			int LA6_1 = input.LA(1);

			if ((LA6_1==37))
			{
				alt6 = 1;
			}
			} finally { DebugExitDecision(6); }
			switch (alt6)
			{
			case 1:
				DebugEnterAlt(1);
				// D:\\Eclipse\\aegiscript_live\\aegiscript.g:51:43: else_g
				{
				DebugLocation(51, 43);
				PushFollow(Follow._else_g_in_ifStatement199);
				else_g27=else_g();
				PopFollow();

				adaptor.AddChild(root_0, else_g27.Tree);

				}
				break;

			}
			} finally { DebugExitSubRule(6); }

			DebugLocation(51, 51);
			PushFollow(Follow._endif_in_ifStatement202);
			endif28=endif();
			PopFollow();

			adaptor.AddChild(root_0, endif28.Tree);

			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (CommonTree)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("ifStatement", 5);
			LeaveRule("ifStatement", 5);
			LeaveRule_ifStatement();
		}
		DebugLocation(52, 1);
		} finally { DebugExitRule(GrammarFileName, "ifStatement"); }
		return retval;

	}
	// $ANTLR end "ifStatement"

	partial void EnterRule_elsif();
	partial void LeaveRule_elsif();
	// $ANTLR start "elsif"
	// D:\\Eclipse\\aegiscript_live\\aegiscript.g:53:1: elsif : 'elsif' ^ expression ':' ( statement )+ ;
	[GrammarRule("elsif")]
	private AstParserRuleReturnScope<CommonTree, IToken> elsif()
	{
		EnterRule_elsif();
		EnterRule("elsif", 6);
		TraceIn("elsif", 6);
		AstParserRuleReturnScope<CommonTree, IToken> retval = new AstParserRuleReturnScope<CommonTree, IToken>();
		retval.Start = (IToken)input.LT(1);

		CommonTree root_0 = default(CommonTree);

		IToken string_literal29 = default(IToken);
		IToken char_literal31 = default(IToken);
		AstParserRuleReturnScope<CommonTree, IToken> expression30 = default(AstParserRuleReturnScope<CommonTree, IToken>);
		AstParserRuleReturnScope<CommonTree, IToken> statement32 = default(AstParserRuleReturnScope<CommonTree, IToken>);

		CommonTree string_literal29_tree = default(CommonTree);
		CommonTree char_literal31_tree = default(CommonTree);
		try { DebugEnterRule(GrammarFileName, "elsif");
		DebugLocation(53, 1);
		try
		{
			// D:\\Eclipse\\aegiscript_live\\aegiscript.g:54:2: ( 'elsif' ^ expression ':' ( statement )+ )
			DebugEnterAlt(1);
			// D:\\Eclipse\\aegiscript_live\\aegiscript.g:54:4: 'elsif' ^ expression ':' ( statement )+
			{
			root_0 = (CommonTree)adaptor.Nil();

			DebugLocation(54, 11);
			string_literal29=(IToken)Match(input,38,Follow._38_in_elsif212); 
			string_literal29_tree = (CommonTree)adaptor.Create(string_literal29);
			root_0 = (CommonTree)adaptor.BecomeRoot(string_literal29_tree, root_0);
			DebugLocation(54, 13);
			PushFollow(Follow._expression_in_elsif215);
			expression30=expression();
			PopFollow();

			adaptor.AddChild(root_0, expression30.Tree);
			DebugLocation(54, 24);
			char_literal31=(IToken)Match(input,26,Follow._26_in_elsif217); 
			char_literal31_tree = (CommonTree)adaptor.Create(char_literal31);
			adaptor.AddChild(root_0, char_literal31_tree);
			DebugLocation(54, 28);
			// D:\\Eclipse\\aegiscript_live\\aegiscript.g:54:28: ( statement )+
			int cnt7=0;
			try { DebugEnterSubRule(7);
			while (true)
			{
				int alt7=2;
				try { DebugEnterDecision(7, false);
				int LA7_1 = input.LA(1);

				if ((LA7_1==IDENT||LA7_1==40||LA7_1==45))
				{
					alt7 = 1;
				}


				} finally { DebugExitDecision(7); }
				switch (alt7)
				{
				case 1:
					DebugEnterAlt(1);
					// D:\\Eclipse\\aegiscript_live\\aegiscript.g:54:28: statement
					{
					DebugLocation(54, 28);
					PushFollow(Follow._statement_in_elsif219);
					statement32=statement();
					PopFollow();

					adaptor.AddChild(root_0, statement32.Tree);

					}
					break;

				default:
					if (cnt7 >= 1)
						goto loop7;

					EarlyExitException eee7 = new EarlyExitException( 7, input );
					DebugRecognitionException(eee7);
					throw eee7;
				}
				cnt7++;
			}
			loop7:
				;

			} finally { DebugExitSubRule(7); }


			}

			retval.Stop = (IToken)input.LT(-1);
